--- a/Frontend/www/assets/less/cart.less
+++ b/Frontend/www/assets/less/cart.less
@@ -28,6 +28,7 @@
             font-size: 14px;
             text-align: left;
             margin-left: 50px;
+            cursor: pointer;
         }
     }
     #cart-bottom {
@@ -51,6 +52,11 @@
     }
     
     #cart-items {
+        #empty-label {
+            margin: 40px;
+            text-align: center;
+            color: darkgrey;
+        }
         overflow-y: auto;
         overflow-x: hidden;
         width: 100%;
@@ -92,6 +98,9 @@
         }
         div {
             margin: 10px;
+        }
+        .price, .item-quantity {
+            font-weight: bold;
         }
     }
 }
