--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -30,6 +30,18 @@
     .pizza-type {
         color: darkgrey;
     }
+    
+    .description {
+        display: block;
+        height: 80px;
+    }
+    
+    .label {
+        position: absolute;
+        font-size: 20px;
+        right: 0;
+        top: -10px;
+    }
 }
 
 .container {
@@ -48,6 +60,10 @@
     
     .quantity {
         margin-left: 5px;
+    }
+    
+    #pizza_list {
+        margin-top: 30px;
     }
 }
 
