--- a/Frontend/www/assets/less/cart.less
+++ b/Frontend/www/assets/less/cart.less
@@ -1,6 +1,10 @@
 @cart-width: 300px;
 @orange-color: #f0ad4e;
 
+.btn-edit {
+     display: none;
+}
+
 #cart {
     box-shadow: -7px 0px 27px -12px rgba(0,0,0,0.63);
     background-color: #f5f5f5;
@@ -40,7 +44,7 @@
         background-color: white;
         font-size: 14px;
         font-weight: bold;
-        .btn {
+        .btn-order {
             margin: 20px;
             margin-left: (@cart-width - 200)/2 - 10;
             width: 200px;
