--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -8,6 +8,31 @@ body {
     background-color: #fffff5;
 }
 
+input:focus {
+    border-color: #51A7E8;
+    background: #FFF;
+    color: rgba(0,0,0,.8);
+    box-shadow: 0 1px 2px rgba(0,0,0,.075) inset,0 0 5px rgba(81,167,232,.5);
+}
+
+input {
+    margin: 0;
+    max-width: 100%;
+    flex: 1 0 auto;
+    outline: 0;
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
+    text-align: left;
+    line-height: 1.2142em;
+    font-family: Arial,'Helvetica Neue',Arial,Helvetica,sans-serif;
+    padding: .43136154em .61538462em;
+    background: #FFF;
+    border: 1px solid #CCC;
+    color: rgba(0,0,0,.87);
+    border-radius: .2307em;
+    transition: box-shadow .1s ease,border-color .1s ease;
+    box-shadow: 0 1px 2px rgba(0,0,0,.075) inset;
+}
+
 #discount {
     position: fixed;
     width: 80px;
@@ -21,11 +46,14 @@ body {
     font-size: 14px;
     //padding-top: 8px;
     font-weight: bold;
-    img {
+    .logoback {
         position: absolute;
         bottom: 100px;
         left: 0px;
         width: 80px;
+        height: 20px;
+        background-image: url("/assets/images/discount.svg");
+        background-size: 80px 20px;
     }
     p {
       margin-top: 10px;  
@@ -75,8 +103,10 @@ a {
 
 #main-footer {
     box-shadow: 0px -7px 27px -12px rgba(0,0,0,0.63);
-    height: 90px;
+    margin-top: 20px;
     width: 100%;
     padding: 30px;
     background-color: white;
+    text-align: center;
 }
+
